--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,16 +277,13 @@ a.image_header {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .text_order_service {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
   position: absolute;
   top: 50%;
   left: 50%;
-
   background-color: #fff;
-
   transform: translate(-50%, -50%), scale(1);
   transition: transform 0.6s ease-in;
 }
