--- a/styles/styles.css
+++ b/styles/styles.css
@@ -303,7 +303,7 @@ a.image_header {
   top: 50%;
   left: 50%;
   background-color: #fff;
-  transform: translate(50, 50), scale(1);
+  transform: scale(1);
   transition: transform 0.6s ease-in;
 }
 .is-hidden .text_order_service {
