--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,7 +112,8 @@ ul {
 .navigate_buttons {
   position: relative;
   color: var(--main_color);
-  transition-property: background-color;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigate_buttons:hover,
 .navigate_buttons:focus {
@@ -210,12 +211,12 @@ a.image_header {
   font-size: 14px;
   line-height: 1.714;
   color: var(--mail_and_links_footer_color);
-  transition-property: background-color;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_footer {
   margin-top: -12px;
   padding-left: 70px;
-  padding-bottom: 100px;
 }
 .join_us {
   color: var(--second_color);
@@ -236,7 +237,8 @@ a.image_header {
   width: 44px;
   padding: 12px;
   border-radius: 50%;
-  transition-property: color;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_icon_footer:hover,
 .social_media_icon_footer:focus {
@@ -451,7 +453,8 @@ a.image_header {
   width: 44px;
   border-radius: 50%;
   padding: 12px;
-  transition-property: color;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_developer:hover,
 .social_media_developer:focus {
@@ -483,7 +486,8 @@ a.image_header {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: rgba(175, 177, 184, 1);
-  transition-property: color;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our_clients_item:hover,
 .our_clients_item:focus {
@@ -521,7 +525,8 @@ a.image_header {
   border: none;
   cursor: pointer;
   padding: 6px 22px 6px 22px;
-  transition-property: color;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card_list_portfolio {
   display: flex;
