--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,6 +52,7 @@ footer {
   background-color: var(--background_color_footer);
   padding-bottom: 60px;
   padding-top: 60px;
+  position: relative;
 }
 a {
   text-decoration: none;
@@ -182,7 +183,7 @@ a.image_header {
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo_footer {
-  display: inline;
+  display: block;
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
@@ -191,8 +192,10 @@ a.image_header {
   color: var(--second_color);
 }
 .adress {
+  position: absolute;
+  display: block;
   width: 246px;
-  padding-top: 20px;
+  margin-top: 51px;
 }
 .list_adress_footer {
   display: block;
@@ -215,7 +218,8 @@ a.image_header {
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_footer {
-  padding-left: 70px;
+  padding-left: 171px;
+  padding-top: 12px;
 }
 .join_us {
   color: var(--second_color);
