--- a/styles/styles.css
+++ b/styles/styles.css
@@ -305,11 +305,14 @@ a.image_header {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: absolute;
+  width: 528px;
+  height: 581px;
   top: 50%;
   left: 50%;
   background-color: #fff;
   transform: scale(1);
   transition: transform 0.6s ease-in;
+  transform: translate(-50%, -50%);
 }
 .is-hidden .text_order_service {
   transform: scale(0);
