--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,8 +58,7 @@ a {
   text-decoration: none;
 }
 button:hover {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 * {
   margin: 0;
@@ -116,6 +115,8 @@ ul {
 .navigate_buttons {
   position: relative;
   color: var(--main_color);
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigate_buttons:hover,
 .navigate_buttons:focus {
@@ -215,6 +216,8 @@ a.image_header {
   font-size: 14px;
   line-height: 1.714;
   color: var(--mail_and_links_footer_color);
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_footer {
   padding-left: 171px;
@@ -239,6 +242,8 @@ a.image_header {
   width: 44px;
   padding: 12px;
   border-radius: 50%;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_icon_footer:hover,
 .social_media_icon_footer:focus {
@@ -459,11 +464,14 @@ a.image_header {
   width: 44px;
   border-radius: 50%;
   padding: 12px;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social_media_developer:hover,
 .social_media_developer:focus {
   fill: var(--second_color);
   background-color: var(--focus_hover_color);
+  border: none;
   transition: transform 250ms ease-in;
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -489,6 +497,8 @@ a.image_header {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: rgba(175, 177, 184, 1);
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our_clients_item:hover,
 .our_clients_item:focus {
@@ -526,6 +536,8 @@ a.image_header {
   border: none;
   cursor: pointer;
   padding: 6px 22px 6px 22px;
+  transition: transform 250ms ease-in;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card_list_portfolio {
   display: flex;
