--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,6 +119,7 @@ ul {
 .navigate_buttons:hover,
 .navigate_buttons:focus {
   color: var(--focus_hover_color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigate_buttons_active::after {
   content: "";
@@ -176,8 +177,7 @@ a.image_header {
 .contacts_footer:hover,
 .contacts_footer:focus {
   color: var(--focus_hover_color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo_footer {
   display: block;
